Added offers to planets

--- a/Code/templates/planets/jupiter.html
+++ b/Code/templates/planets/jupiter.html
@@ -28,12 +28,12 @@
     <h3>KING OF THE SOLAR SYSTEM</h3>
     <div class="row">
       <div class="col">
-        <a href="www.google.com"><img src="../../static/ofer1_icon.png" style="width: 40px;"></a><br>
-        <figurecaption>Trip to C13</figurecaption>
+        <a href="../../static/offers/A Galilean adventure.pdf"><img src="../../static/ofer1_icon.png" style="width: 40px;"></a><br>
+        <figurecaption>A Galilean adventure</figurecaption>
       </div>
       <div class="col">
-        <a href="www.google.com"><img src="../../static/ofer2_icon.png" style="width: 40px;"></a><br>
-        <figurecaption>Trip to hell</figurecaption>
+        <a href="../../static/offers/In the footsteps of Voyager 2.pdf"><img src="../../static/ofer2_icon.png" style="width: 40px;"></a><br>
+        <figurecaption>In the footsteps of Voyager 2</figurecaption>
       </div>
     </div>
     
