--- a/Code/templates/recomendations.html
+++ b/Code/templates/recomendations.html
@@ -37,10 +37,57 @@
                     <div class="row">
                         <img class="col" src="../static/planets/mercury.jpg" style = "width: 200px" >
                         <div class="col">
-                            <h2>Name</h2>
-                            <p>Locations: Mercury</p>
-                            <p class="summary">summary</p>
-                            <a href="" class="read-more-button">Read more</a>
+                            <h2>A Galilean adventure</h2>
+                            <p>Locations: Jupiter, Io, Europe, Ganymede, and Callisto</p>
+                            <p class="summary">Rediscover the neighborhood of the King of Planets! During this tour, you will have the opportunity to
+                                land on the moons Io, Europa, Ganymede, and Callisto. We provide views such as making a snowman
+                                out of freshly fallen sulfur on Io, the seafloor of Europa, impact craters on Ganymede and Jupiter
+                                admired from a hotel on Callisto, placed at a safe distance from the Gas Giant.</p>
+                            <a href="../static/offers/A Galilean adventure.pdf" class="read-more-button">Read more</a>
+                            <a href="/is_loged_in" class="read-more-button">Reserve</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="article">
+                    <div class="row">
+                        <img class="col" src="../static/planets/mercury.jpg" style = "width: 200px" >
+                        <div class="col">
+                            <h2>In the footsteps of Voyager 2</h2>
+                            <p>Locations: Jupiter, Moon Io, Saturn, Titan, Uranus, Neptune</p>
+                            <p class="summary">This is the route taken by an unmanned space probe sent by NASA in 1977. During our expedition, we
+                                will visit as many as 4 planets of the Solar System. We will delve into the history of the Voyager
+                                mission, but also other fascinating missions from the second half of the 20th century.</p>
+                            <a href="../static/offers/In the footsteps of Voyager 2.pdf" class="read-more-button">Read more</a>
+                            <a href="/is_loged_in" class="read-more-button">Reserve</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="article">
+                    <div class="row">
+                        <img class="col" src="../static/planets/mercury.jpg" style = "width: 200px" >
+                        <div class="col">
+                            <h2>On the trail of the robotic explorers of Mars</h2>
+                            <p>Locations: Mars</p>
+                            <p class="summary">Join us for a tour of our scientific heritage! During this space expedition, you will have the
+                                opportunity to see such historic sites as the landing areas of the Viking mission, the route of the
+                                Opportunity, Spirit, Curiosity, and Perseverance rovers, or see the site of the first manned landing on
+                                Mars!</p>
+                            <a href="../static/offers/On the trail of the robotic explorers of Mars.pdf" class="read-more-button">Read more</a>
+                            <a href="/is_loged_in" class="read-more-button">Reserve</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="article">
+                    <div class="row">
+                        <img class="col" src="../static/planets/mercury.jpg" style = "width: 200px" >
+                        <div class="col">
+                            <h2>Hot climates in the solar system</h2>
+                            <p>Locations: Venus</p>
+                            <p class="summary">This excursion is primarily aimed at lovers of incredible experiences and tropical climates. On this trip
+                                you will visit the planets Mercury and Venus, where the extreme temperatures will have everyone
+                                spellbound! You will have the opportunity to spend time in Hotels unique to the entire solar system -
+                                a wandering hotel on Mercury and a flying city in the higher layers of Venus' atmosphere.</p>
+                            <a href="../static/offers/Hot climates in the solar system.pdf" class="read-more-button">Read more</a>
                             <a href="/is_loged_in" class="read-more-button">Reserve</a>
                         </div>
                     </div>
