--- a/Code/templates/planets/mars.html
+++ b/Code/templates/planets/mars.html
@@ -28,13 +28,13 @@
     <h3>MARS ROCKS!</h3>
     <div class="row">
       <div class="col">
-        <a href="www.google.com"><img src="../../static/ofer1_icon.png" style="width: 40px;"></a><br>
-        <figurecaption>Trip to C13</figurecaption>
+        <a href="../../static/offers/On the trail of the robotic explorers of Mars.pdf"><img src="../../static/ofer1_icon.png" style="width: 40px;"></a><br>
+        <figurecaption>Robots on Mars</figurecaption>
       </div>
-      <div class="col">
-        <a href="www.google.com"><img src="../../static/ofer2_icon.png" style="width: 40px;"></a><br>
+      <!-- <div class="col">
+        <a href="../../static/offers/On the trail of the robotic explorers of Mars.pdf"><img src="../../static/ofer2_icon.png" style="width: 40px;"></a><br>
         <figurecaption>Trip to hell</figurecaption>
-      </div>
+      </div> -->
     </div>
     
     <button onclick="openModal('modal1')">Atractions</button>
