--- a/Code/templates/planets/mercury.html
+++ b/Code/templates/planets/mercury.html
@@ -26,7 +26,7 @@
   <div class="content">
     <h1>MERCURY</h1>
     <h3>ENJOY THE JOURNEY TOGETHER!</h3>
-    <div class="row">
+    <!-- <div class="row">
       <div class="col">
         <a href="www.google.com"><img src="../../static/ofer1_icon.png" style="width: 40px;"></a><br>
         <figurecaption>Trip to C13</figurecaption>
@@ -35,7 +35,7 @@
         <a href="www.google.com"><img src="../../static/ofer2_icon.png" style="width: 40px;"></a><br>
         <figurecaption>Trip to hell</figurecaption>
       </div>
-    </div>
+    </div> -->
     
     <button onclick="openModal('modal1')">Atractions</button>
     <button onclick="openModal('modal2')">Fun fact</button>
