--- a/Code/templates/planets/saturn.html
+++ b/Code/templates/planets/saturn.html
@@ -27,13 +27,13 @@
     <h1>SATURN</h1>
     <h3>THE RINGED GIANT</h3>
     <div class="row">
-      <div class="col">
+      <!-- <div class="col">
         <a href="www.google.com"><img src="../../static/ofer1_icon.png" style="width: 40px;"></a><br>
         <figurecaption>Trip to C13</figurecaption>
-      </div>
+      </div> -->
       <div class="col">
-        <a href="www.google.com"><img src="../../static/ofer2_icon.png" style="width: 40px;"></a><br>
-        <figurecaption>Trip to hell</figurecaption>
+        <a href="../../static/offers/In the footsteps of Voyager 2.pdf"><img src="../../static/ofer2_icon.png" style="width: 40px;"></a><br>
+        <figurecaption>Follow the steps of Voyager 2</figurecaption>
       </div>
     </div>
     
