--- a/Code/templates/planets/venus.html
+++ b/Code/templates/planets/venus.html
@@ -27,13 +27,13 @@
     <h1>VENUS</h1>
     <h3>LET'S GET HOT TOGETHER!</h3>
     <div class="row">
-      <div class="col">
+      <!-- <div class="col">
         <a href="www.google.com"><img src="../../static/ofer1_icon.png" style="width: 40px;"></a><br>
         <figurecaption>Trip to C13</figurecaption>
-      </div>
+      </div> -->
       <div class="col">
-        <a href="www.google.com"><img src="../../static/ofer2_icon.png" style="width: 40px;"></a><br>
-        <figurecaption>Trip to hell</figurecaption>
+        <a href="../../static/offers/Hot climates in the solar system.pdf"><img src="../../static/ofer2_icon.png" style="width: 40px;"></a><br>
+        <figurecaption>Explore the true hotness!</figurecaption>
       </div>
     </div>
     
