Kosmetyka dla Ani

--- a/Code/static/styles.css
+++ b/Code/static/styles.css
@@ -172,6 +172,8 @@
 /* Wyświetlanie rozwijanego menu po najechaniu myszką */
 .dropdown:hover .dropdown-content {
     display: block;
+    position: fixed;
+    z-index: 9999;
 }
   .row {
     font-size: 1.5vw;
