--- a/Code/templates/recomendations.html
+++ b/Code/templates/recomendations.html
@@ -35,7 +35,7 @@
             <article>
                 <div class="article">
                     <div class="row">
-                        <img class="col" src="../static/planets/mercury.jpg" style = "width: 200px" >
+                        <img class="col" src="../static/offers/jupiter_pole.webp" style = "width: 500px" >
                         <div class="col">
                             <h2>A Galilean adventure</h2>
                             <p>Locations: Jupiter, Io, Europe, Ganymede, and Callisto</p>
@@ -50,7 +50,7 @@
                 </div>
                 <div class="article">
                     <div class="row">
-                        <img class="col" src="../static/planets/mercury.jpg" style = "width: 200px" >
+                        <img class="col" src="../static/offers/voyager.webp" style = "width: 500px" >
                         <div class="col">
                             <h2>In the footsteps of Voyager 2</h2>
                             <p>Locations: Jupiter, Moon Io, Saturn, Titan, Uranus, Neptune</p>
@@ -64,7 +64,7 @@
                 </div>
                 <div class="article">
                     <div class="row">
-                        <img class="col" src="../static/planets/mercury.jpg" style = "width: 200px" >
+                        <img class="col" src="../static/offers/rover.jpg" style = "width: 500px" >
                         <div class="col">
                             <h2>On the trail of the robotic explorers of Mars</h2>
                             <p>Locations: Mars</p>
@@ -79,7 +79,7 @@
                 </div>
                 <div class="article">
                     <div class="row">
-                        <img class="col" src="../static/planets/mercury.jpg" style = "width: 200px" >
+                        <img class="col" src="../static/offers/hot.webp" style = "width: 500px" >
                         <div class="col">
                             <h2>Hot climates in the solar system</h2>
                             <p>Locations: Venus</p>
