--- a/Code/templates/travel_law.html
+++ b/Code/templates/travel_law.html
@@ -32,8 +32,9 @@
         <article class="article">
             <div class="row">
                 <div class="col">
-                    <h1>DEPATRURE REGULATIONS</h1>
-                    <p class="summary">Persons travelling into space are bound by space law, which should be consulted at www.spacelaw.gov.</p>
+                    <h1>DEPATRURE REGULATIONS</h1>               
+                    <p class="summary">Persons travelling into space are bound by space law, which should be consulted at</p>
+                    <p><a href="https://www.unoosa.org/oosa/en/ourwork/spacelaw/index.html">www.spacelaw.gov</a></p>
                 </div>
                 <img class="col" src="../static/travel/departure.jpeg" style = "width: 500px;" >
             </div>
