--- a/Code/static/planets.css
+++ b/Code/static/planets.css
@@ -35,6 +35,7 @@ a:hover {
 }
 
 .container {
+  z-index: 9900;
   text-align: center;
   position: relative;
   margin: 0;
@@ -119,6 +120,56 @@ a:hover {
   color: black;
 }
 
+   /* Styl dla opcji rozwijanego menu */
+   .dropdown {
+    float: left;
+    overflow: hidden;
+}
+
+/* Styl dla przycisku rozwijającego menu */
+.dropdown .dropbtn {
+    font-size: 16px;
+    border: none;
+    outline: none;
+    color: white;
+    background-color: inherit;
+    margin: 0;
+    padding: 14px 16px;
+    text-align: center;
+}
+
+/* Styl dla zawartości rozwijanego menu */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #333;
+    min-width: 160px;
+    z-index: 1;
+}
+
+/* Styl dla opcji w rozwijanym menu */
+.dropdown-content a {
+    float: none;
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+/* Zmiana koloru opcji w rozwijanym menu po najechaniu myszką */
+.dropdown-content a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+/* Wyświetlanie rozwijanego menu po najechaniu myszką */
+.dropdown:hover .dropdown-content {
+    display: block;
+    position: fixed;
+    z-index: 9999;
+}
+
 .row {
   display: flex;
   justify-content: center;
@@ -174,6 +225,7 @@ table {
   border-radius: 5px;
   font-size: small;
   position: relative;
+  text-align: left;
   top: 50%;
   transform: translateY(-50%);
 }
