--- a/Code/templates/planets/neptune.html
+++ b/Code/templates/planets/neptune.html
@@ -12,16 +12,25 @@
 </main>
 <div id="topnav" class="topnav" style="position: fixed;">
   <a href="/">HOME</a>
-  <a href="/go_bestsellers">BESTSELLERS</a>
   <a href="/go_recomend">OUR RECOMENDATIONS</a>
   <a href="/go_discover">DISCOVER</a>
   <a href="/go_blog">BLOG</a>
-  <a href= "/go_insurance">INSURANCE</a>
-  <a href= "/go_travel_law">TRAVEL LAW</a>
-  <a href= "/go_conditions">CONDITIONS</a>
+  <div class="dropdown">
+      <button class="dropbtn">TRAVEL DETAILS
+        <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+        <a href= "/go_transport">TRANSPORT</a>
+        <a href= "/go_hotel">ACCOMODATION</a>
+        <a href= "/go_insurance">INSURANCE</a>
+        <a href= "/go_travel_law">DEPATRURE REGULATIONS</a>
+        <a href= "/go_conditions">CONDITIONS</a>
+    </div>
+</div>
   <a href="/go_about">ABOUT US</a>
   <a class="active" img href="/go_login"><img style="width:40px;"src="../static/login_icon.png"></a>
 </div>
+
 <div class="container">
   <div class="content">
     <h1>NEPTUNE</h1>
@@ -45,7 +54,7 @@
 
     <!-- Okna modalne -->
     <div class="modal" id="modal1">
-        <div class="modal-content">
+        <div class="modal-content" style="text-align: center;">
             <h2>Journey to the limits of understanding</h2>
             <p>With our travel agency you have the opportunity to reach the last, well-known limits of the solar system, our home. It is in Neptune's orbit that you can best feel what it means to be "between the stars" because the Sun in Neptune's orbit is 1/30 the size of the Sun visible from Earth's orbit! This also affects the brightness of our star - it is 900 times fainter in Neptune's orbit!</p>
             <h2>Flying in a stratospheric balloon full of excitement! </h2>
@@ -105,8 +114,8 @@
           </div>
   
           <!-- Przyciski nawigacyjne -->
-          <a class="prev" onclick="plusSlides(-1)">Poprzedni</a>
-          <a class="next" onclick="plusSlides(1)">Następny</a>
+          <a class="prev" onclick="plusSlides(-1)">Previous</a>
+          <a class="next" onclick="plusSlides(1)">Next</a>
           <!-- Punkty pod slajdami -->
           <div class="dot-container">
             <span class="dot" onclick="currentSlide(1)"></span>
