--- a/Code/templates/planets/venus.html
+++ b/Code/templates/planets/venus.html
@@ -12,16 +12,25 @@
 </main>
 <div id="topnav" class="topnav" style="position: fixed;">
   <a href="/">HOME</a>
-  <a href="/go_bestsellers">BESTSELLERS</a>
   <a href="/go_recomend">OUR RECOMENDATIONS</a>
   <a href="/go_discover">DISCOVER</a>
   <a href="/go_blog">BLOG</a>
-  <a href= "/go_insurance">INSURANCE</a>
-  <a href= "/go_travel_law">TRAVEL LAW</a>
-  <a href= "/go_conditions">CONDITIONS</a>
+  <div class="dropdown">
+      <button class="dropbtn">TRAVEL DETAILS
+        <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+        <a href= "/go_transport">TRANSPORT</a>
+        <a href= "/go_hotel">ACCOMODATION</a>
+        <a href= "/go_insurance">INSURANCE</a>
+        <a href= "/go_travel_law">DEPATRURE REGULATIONS</a>
+        <a href= "/go_conditions">CONDITIONS</a>
+    </div>
+</div>
   <a href="/go_about">ABOUT US</a>
   <a class="active" img href="/go_login"><img style="width:40px;"src="../static/login_icon.png"></a>
 </div>
+
 <div class="container">
   <div class="content">
     <h1>VENUS</h1>
@@ -45,7 +54,7 @@
 
     <!-- Okna modalne -->
     <div class="modal" id="modal1">
-        <div class="modal-content">
+        <div class="modal-content" style="text-align: center;">
             <h2>A city in the clouds</h2>
             <p>About to explore the entire solar system, but worried about the conditions on Venus? Rest assured, our habitat is far from the extreme conditions of this rocky planet - the residents of our hotel have their heads high in the clouds! Here, at an altitude of 50 km above the surface of the second planet from the sun, atmospheric conditions are similar to those on Earth - the pressure is equal to 1 atm and the temperature does not exceed 50°C. Inside our sky hotels, you can relax without any worries!</p>
             <button onclick="closeModal('modal1')">Close</button>
@@ -101,8 +110,8 @@
           </div>
   
           <!-- Przyciski nawigacyjne -->
-          <a class="prev" onclick="plusSlides(-1)">Poprzedni</a>
-          <a class="next" onclick="plusSlides(1)">Następny</a>
+          <a class="prev" onclick="plusSlides(-1)">Previous</a>
+          <a class="next" onclick="plusSlides(1)">Next</a>
           <!-- Punkty pod slajdami -->
           <div class="dot-container">
             <span class="dot" onclick="currentSlide(1)"></span>
