--- a/Code/templates/planets/jupiter.html
+++ b/Code/templates/planets/jupiter.html
@@ -103,26 +103,26 @@
 
     <div class="modal" id="modal5">
       <div class="modal-content">
-        <div class="slideshow-container">
+        <div class="slideshow-container" style="text-align: center;">
           <!-- Slajdy -->
           <div class="mySlides">
               <img src="../../static/planets/Jowisz/Jupiter South Pole.webp" style="width: 100%;">
+              <figurecaption>Jupiter south pole</figurecaption>
           </div>
   
           <div class="mySlides">
             <img src="../../static/planets/Jowisz/Jupiter_-_Great_Red_Spot_-_PJ7-60_61_62_-_Balanced_(49803032983).png" style="width: 100%;">
+            <figurecaption>The Great Red Spot - biggest Jowian anticyclone</figurecaption>
           </div>
   
           <div class="mySlides">
             <img src="../../static/planets/Jowisz/The Red Spot.jpg" style="width: 100%;">
-          </div>
-
-          <div class="mySlides">
-            <img src="../../static/planets/Jowisz/The Red Spot2.jpg" style="width: 100%;">
+            <figurecaption>The Great Red Spot from Juno spacecraft</figurecaption>
           </div>
 
           <div class="mySlides">
             <img src="../../static/planets/Jowisz/giphy.gif" style="width: 100%;">
+            <figurecaption>Animation of Jovian higher atmosphere</figurecaption>
           </div>
   
   
