--- a/Code/templates/planets/mars.html
+++ b/Code/templates/planets/mars.html
@@ -101,24 +101,25 @@
         <div class="modal-content">
           <div class="slideshow-container">
             <!-- Slajdy -->
-            <div class="mySlides">
-                <img src="../../static/planets/Mars/Annotated_JWST_image_of_Uranus_moons.png" style="width: 100%;">
-            </div>
-    
-            <div class="mySlides">
+            <div class="mySlides" style="text-align: center;">
               <img src="../../static/planets/Mars/Olympus Mons2.jpg" style="width: 100%;">
+              <figurecaption>Olympus Mons - highest peak in Solar System</figurecaption>
             </div>
 
             <div class="mySlides">
               <img src="../../static/planets/Mars/Valles_and_Tharsis.jpg" style="width: 100%;">
+              <figurecaption>Voulcanic Tharsis region</figurecaption>
             </div>
 
             <div class="mySlides">
               <img src="../../static/planets/Mars/Valles_Marineris1.jpg" style="width: 100%;">
+              <figurecaption>Sedimantary rock of Valles Marineris</figurecaption>
+
             </div>
 
             <div class="mySlides">
-              <img src="../../static/planets/Mars/Valles_Marineris2.jpg" style="width: 100%;">
+              <img src="../../static/planets/Mars/vallesmarineris3500.jpg" style="width: 100%;">
+              <figurecaption>The largest canyon in Solar System - Valles Marineris</figurecaption>
             </div>
     
             <!-- Przyciski nawigacyjne -->
