--- a/Code/templates/planets/mercury.html
+++ b/Code/templates/planets/mercury.html
@@ -94,18 +94,21 @@
 
     <div class="modal" id="modal5">
       <div class="modal-content">
-        <div class="slideshow-container">
+        <div class="slideshow-container" style="text-align: center;">
           <!-- Slajdy -->
           <div class="mySlides">
               <img src="../../static/planets/Merkury/Mercury.jpg" style="width: 100%;">
+              <figurecaption>Sunrise on Mercury</figurecaption>
           </div>
   
           <div class="mySlides">
             <img src="../../static/planets/Merkury/386889087_3579694198985958_7213633099174967198_n.jpg" style="width: 100%;">
+            <figurecaption>Map of named Mercurian craters</figurecaption>
           </div>
   
           <div class="mySlides">
             <img src="../../static/planets/Merkury/jpegPIA02438.jpg" style="width: 100%;">
+            <figurecaption>Mercury surface in close up</figurecaption>
           </div>
   
           <!-- Przyciski nawigacyjne -->
