--- a/Code/templates/planets/saturn.html
+++ b/Code/templates/planets/saturn.html
@@ -102,18 +102,21 @@
 
     <div class="modal" id="modal5">
       <div class="modal-content">
-        <div class="slideshow-container">
+        <div class="slideshow-container" style="text-align: center;">
           <!-- Slajdy -->
           <div class="mySlides">
               <img src="../../static/planets/Saturn/PIA21611_-_Saturn_s_Hexagon_as_Summer_Solstice_Approaches.gif" style="width: 100%;">
+              <figurecaption>Hexagonal hurricane on Saturne's north pole</figurecaption>
           </div>
   
           <div class="mySlides">
             <img src="../../static/planets/Saturn/Saturn_and_rings.jpg" style="width: 100%;">
+            <figurecaption>Saturn and rings</figurecaption>
           </div>
   
           <div class="mySlides">
             <img src="../../static/planets/Saturn/jpegPIA09856.jpg" style="width: 100%;">
+            <figurecaption>Saturn and Titan </figurecaption>
           </div>
   
           <!-- Przyciski nawigacyjne -->
