--- a/Code/templates/planets/neptune.html
+++ b/Code/templates/planets/neptune.html
@@ -99,18 +99,21 @@
 
     <div class="modal" id="modal5">
       <div class="modal-content">
-        <div class="slideshow-container">
+        <div class="slideshow-container" style="text-align: center;">
           <!-- Slajdy -->
           <div class="mySlides">
               <img src="../../static/planets/Neptun/Neptun.jpg" style="width: 100%;">
+              <figurecaption>Neptun photo taken by Voyager 2</figurecaption>
           </div>
   
           <div class="mySlides">
             <img src="../../static/planets/Neptun/Neptune_and_Triton.jpg" style="width: 100%;">
+            <figurecaption>Neptune and Triton</figurecaption>
           </div>
   
           <div class="mySlides">
             <img src="../../static/planets/Neptun/New_Webb_Images_Capture_Rare_View_of_Neptune’s_Rings_(Labeled).png" style="width: 100%;">
+            <figurecaption>Moons of Neptune taken by JWST</figurecaption>
           </div>
   
           <!-- Przyciski nawigacyjne -->
