--- a/Code/templates/planets/uranus.html
+++ b/Code/templates/planets/uranus.html
@@ -101,18 +101,21 @@
 
     <div class="modal" id="modal5">
       <div class="modal-content">
-        <div class="slideshow-container">
+        <div class="slideshow-container" style="text-align: center;">
           <!-- Slajdy -->
           <div class="mySlides">
               <img src="../../static/planets/Uran/Annotated_JWST_image_of_Uranus_moons.png" style="width: 100%;">
+              <figurecaption>JWST image of Uranus Moons</figurecaption>
           </div>
   
           <div class="mySlides">
             <img src="../../static/planets/Uran/Uranus.jpg" style="width: 100%;">
+            <figurecaption>Voyager 2 image of Uranus</figurecaption>
           </div>
   
           <div class="mySlides">
             <img src="../../static/planets/Uran/Uranus_Moons.jpg" style="width: 100%;">
+            <figurecaption>Scructure of Uranus Moons</figurecaption>
           </div>
   
           <!-- Przyciski nawigacyjne -->
