--- a/Code/templates/planets/venus.html
+++ b/Code/templates/planets/venus.html
@@ -95,18 +95,21 @@
 
     <div class="modal" id="modal5">
       <div class="modal-content">
-        <div class="slideshow-container">
+        <div class="slideshow-container" style="text-align: center;">
           <!-- Slajdy -->
           <div class="mySlides">
               <img src="../../static/planets/Wenus/Venus.jpg" style="width: 100%;">
+              <figurecaption>Mariner 9 image of Venus</figurecaption>
           </div>
   
           <div class="mySlides">
             <img src="../../static/planets/Wenus/Venus_surface.jpg" style="width: 100%;">
+            <figurecaption>Venera 14 image of Venusian surface</figurecaption>
           </div>
   
           <div class="mySlides">
             <img src="../../static/planets/Wenus/jpegPIA00245.jpg" style="width: 100%;">
+            <figurecaption>Orbiter's image of Venus surface</figurecaption>
           </div>
   
           <!-- Przyciski nawigacyjne -->
