--- a/Code/templates/planets/neptune.html
+++ b/Code/templates/planets/neptune.html
@@ -98,7 +98,7 @@
     </div>
 
     <div class="modal" id="modal5">
-      <div class="modal-content">
+      <div class="modal-content" style="text-align: center;">
         <div class="slideshow-container" style="text-align: center;">
           <!-- Slajdy -->
           <div class="mySlides">
