--- a/Code/static/discover.css
+++ b/Code/static/discover.css
@@ -4,25 +4,21 @@
     padding: 20px;
 }
 
-/* Style for the article title */
 .article h2 {
     color: white;
     font-size: 24px;
 }
 
-/* Style for the article publication date */
 .article p {
     font-style: italic;
     color: #ccc;
 }
 
-/* Style for the article summary */
 .summary {
     font-size: 16px;
     margin-top: 10px;
 }
 
-/* Style for the article image */
 .article img {
     max-width: 100%;
     height: auto;
@@ -30,7 +26,7 @@
     margin: 10px 0;
 }
 
-/* Style for the "Read more" button */
+/* Style for button */
 .read-more-button {
     display: inline-block;
     background-color: #007bff;
