--- a/Code/templates/travel_law.html
+++ b/Code/templates/travel_law.html
@@ -35,8 +35,8 @@
                     <h1>DEPATRURE REGULATIONS</h1>               
                     <p class="summary">Persons travelling into space are bound by space law, which should be consulted at</p>
                     <p><a href="https://www.unoosa.org/oosa/en/ourwork/spacelaw/index.html">www.spacelaw.gov</a></p>
-                </div>
-                <img class="col" src="../static/travel/departure.jpeg" style = "width: 500px;" >
+                </div><br>
+                <img class="col" src="../static/travel/lawyer.png" style = "width: 800px;" >
             </div>
         </article>
     </main>
