Added photo of team members

--- a/Code/templates/about.html
+++ b/Code/templates/about.html
@@ -38,6 +38,7 @@
                         <p class="summary">We are a group of friends who met when we were still students and were brought together by our love of space and travel. So we decided to combine these passions and share them with others. We offer original tours of the most amazing places in the Solar System.</p>
                     </div>
                     <img class="col" src="../static/team_photos/zespol1.jpg" style = "width: 300px;" >
+                    <img class="col" src="../static/team_photos/SnailMichael.jpg" style = "height: 300px;" >
                     <!-- background: linear-gradient(to top, rgba(210, 12, 12, 0), rgba(76, 7, 2, 0.932)); -->
                 </div>
             </div>
